--- a/paper/seminarski.bib
+++ b/paper/seminarski.bib
@@ -1,35 +1,52 @@
 
-@book{laski2009software,
-  title={{Software Verification and Analysis}},
-  author={Laski, J. and Stanley, W.},
-  isbn={9781848822405},
-  url={http://books.google.rs/books?id=5hFnaDQ1jiAC},
-  year={2009},
-  publisher={Springer-Verlag},
-  address = {London}
+@article{galeShapley,
+	ISSN = {00029890, 19300972},
+	URL = {http://www.jstor.org/stable/2312726},
+	author = {D. Gale and L. S. Shapley},
+	journal = {The American Mathematical Monthly},
+	number = {1},
+	pages = {9--15},
+	publisher = {Mathematical Association of America},
+	title = {College Admissions and the Stability of Marriage},
+	volume = {69},
+	year = {1962}
 }
 
+@INPROCEEDINGS{slozenost, 
+	author={K. {Iwama} and S. {Miyazaki}}, 
+	booktitle={International Conference on Informatics Education and Research for Knowledge-Circulating Society (icks 2008)}, 
+	title={A Survey of the Stable Marriage Problem and Its Variants}, 
+	year={2008}, 
+	volume={}, 
+	number={}, 
+	pages={131-136}, 
+	keywords={gender issues;graph theory;search problems;stable marriage problem;output matching;bipartite graph;Samarium;Informatics;Impedance matching;Hospitals;Mathematics;Game theory;Computer science;Application software;History;Bipartite graph;matching;stable matching;stable marriage;stable roommates}, 
+	doi={10.1109/ICKS.2008.7}, 
+	ISSN={}, 
+	month={Jan},}
 
 
-@misc{gcc,
-title = {{GNU gcc}},
-note = {on-line at: \url{http://gcc.gnu.org/}},
-    author = {Free Software Foundation},
-    year = {2013}
+
+@article{prevara,
+	author = {L. E. Dubins and D. A. Freedman},
+	title = {Machiavelli and the Gale-Shapley Algorithm},
+	journal = {The American Mathematical Monthly},
+	volume = {88},
+	number = {7},
+	pages = {485-494},
+	year  = {1981},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/00029890.1981.11995301},
+	
+	URL = { 
+	https://doi.org/10.1080/00029890.1981.11995301
+	
+	},
+	eprint = { 
+	https://doi.org/10.1080/00029890.1981.11995301
+	
+	}
+	
 }
 
-
-@article{haltingproblem,
-    author = {Turing, A. M.},
-    citeulike-article-id = {155758},
-    journal = {Proceedings of the London Mathematical Society},
-    keywords = {computability, entscheidungsproblem, turing},
-    number = {42},
-    pages = {230--265},
-    posted-at = {2005-04-08 18:11:59},
-    priority = {0},
-    title = {{On Computable Numbers, with an application to the Entscheidungsproblem}},
-    volume = {2},
-    year = {1936}
-}
 
